# declare-rs

./: Cargo.toml  readme.md
src/: main.rs
src/commands/: config.rs  mod.rs
src/common/: config.rs  consts.rs  currency.rs  mod.rs  output_format.rs
src/declaration/: declaration_entity.rs  declaration_manager.rs  mod.rs
src/exchange/: exchanger.rs  mod.rs  nbg_exchange_response.rs
src/handlers/: handlers.rs
