[package]
name = "declare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["cargo", "derive", "string"] }
clap-serde-derive = "0.2.1"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = "1.0.193"
serde_json = "1.0.108"
time = { version = "0.3.30", features = ["parsing", "serde", "serde-human-readable", "serde-well-known"] }
serde_yaml = "0.9.27"
config = "0.13.4"
chrono = "0.4.31"
dirs = "5.0.1"
csv = "1.3.0"
opener = "0.6.1"
